<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.features.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="@dimen/margin_padding_horizontal_general"
            android:paddingVertical="@dimen/padding_toolbar"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/logoAppComposable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/favoriteIconContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/favoriteIconContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/logoAppComposable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/logoAppComposable">

                <ImageView
                    android:id="@+id/favoriteIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/margin_padding_vertical_1"
                    android:src="@drawable/ic_baseline_favorite_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/favoriteLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/favoriteLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites"
                    android:textAppearance="@style/textAppearanceBody1"
                    android:textColor="@color/favorite_color"
                    app:layout_constraintBottom_toBottomOf="@id/favoriteIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/favoriteIcon"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorOnPrimary"
            android:layout_marginHorizontal="@dimen/margin_padding_horizontal_general"
            app:cardCornerRadius="@dimen/corner_radius_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_padding_vertical_2">

                <TextView
                    android:id="@+id/searchLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_padding_horizontal_general"
                    android:text="@string/search"
                    android:textColor="@color/font_subtitle_2"
                    android:alpha="0.6"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/searchIcon"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/margin_padding_vertical_1"
                    android:src="@drawable/ic_baseline_search_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.6"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription"
                    app:tint="@color/font_subtitle_2" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/popularShowsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_vertical_4"
            android:layout_marginHorizontal="@dimen/margin_padding_horizontal_general"
            android:text="@string/popular_shows"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView" />


        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/listOfShowsComposable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popularShowsLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>