<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.features.detail.DetailFragment">

    <data>

        <variable
            name="name"
            type="String" />

        <variable
            name="schedule"
            type="String" />

        <variable
            name="genres"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.compose.ui.platform.ComposeView
                    android:id="@+id/bannerComposable"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@color/colorPrimary" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/gradient_detail" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/backIcon"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="44dp"
                    android:padding="8dp"
                    android:layout_marginStart="@dimen/margin_padding_vertical_general"
                    android:background="@drawable/bg_ic_arrow_back"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_vertical_general"
            android:layout_marginEnd="@dimen/margin_padding_vertical_general"
            app:cardBackgroundColor="@color/colorOnPrimary"
            app:cardCornerRadius="@dimen/corner_radius_2"
            app:layout_constraintBottom_toBottomOf="@id/app_bar"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_vertical_general">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLength="35"
                    android:maxLines="1"
                    android:text="@{name}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="?colorOnSurface"
                    android:textStyle="bold"
                    tools:text="Show Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_vertical_general"
                        android:text="@string/genres"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_baseline_local_movies_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_vertical_general"
                        android:text="@{genres}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        tools:text="Comedy, Horror, faith" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_vertical_general"
                        android:text="@string/schedule"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_baseline_calendar_month_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_vertical_general"
                        android:text="@{schedule}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        tools:text="Monday, Tuesday, Wednesday at 18:00 (30 min)" />

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/seasonsContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_vertical_general"
                    android:layout_marginTop="110dp"
                    app:cardBackgroundColor="@color/series_select_box"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/margin_padding_vertical_general"
                        android:paddingVertical="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/seasons"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            android:textStyle="bold"
                            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24" />
                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/summaryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_padding_horizontal_general"
                    android:layout_marginTop="@dimen/margin_padding_vertical_general"
                    android:text="@string/summary"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seasonsContainer" />


                <TextView
                    android:id="@+id/summaryView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_padding_horizontal_general"
                    android:layout_marginTop="@dimen/margin_padding_vertical_general"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/summaryTitle"
                    tools:text="Girl Meets World is based on ABC's hugely popular sitcom, Boy Meets World (1993). Set in New York City, the show tells the wonderfully funny heartfelt stories that Boy Meets World is renowned for - only this time from a tween girl's perspective - as the curious and bright 7th grader Riley Matthews and her quick-witted friend Maya Fox embark on an unforgettable middle school experience. But their plans for a carefree year will be adjusted slightly under the watchful eyes of Riley's parents - dad Cory, who's also a faculty member (and their new History teacher), and mom Topanga, who owns a trendy after school hangout that specializes in pudding." />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/seasonsContainerContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColorEpisodes"
            android:visibility="gone"
            android:elevation="10dp">

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/expandableListComposable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:layout_centerInParent="true"
                tools:background="@color/colorPrimary" />


            <ProgressBar
                android:id="@+id/progressBarEpisodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorPrimary"
                android:layout_centerInParent="true"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/closeFavoritesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:elevation="0dp"
                android:layout_margin="@dimen/margin_padding_vertical_general"
                android:src="@drawable/ic_baseline_close_24"
                tools:ignore="ContentDescription"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
